# bazel-learning

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  flake.nix
app/: BUILD.bazel  main.cpp
libs/foobar/: BUILD.bazel
libs/foobar/inc/foobar/: foobar.hpp
libs/foobar/src/: foobar.cpp
libs/shapes/: BUILD.bazel
libs/shapes/inc/shapes/: shapes.hpp
libs/shapes/src/: shapes.cpp
