"""
Module for spdlog and SI units
"""

bazel_dep(name = "spdlog", version = "1.15.1")

# Rules Foreign CC for building CMake projects - updated to latest version
bazel_dep(name = "rules_foreign_cc", version = "0.13.0")

# Use http_archive directly in MODULE.bazel (Bazel 8 Bzlmod approach)
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "si_source",
    urls = ["https://github.com/bernedom/SI/archive/refs/tags/2.5.3.tar.gz"],
    strip_prefix = "SI-2.5.3",
    sha256 = "5c06f9f471474b97ed16e0f63f301d41702d27f6b9f340f0420eb0cfb928d0c6",  # SHA256 of archive
    build_file_content = '''filegroup(
    name = "all",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)''',
)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in README).
)
